--- a/readme
+++ b/readme
@@ -9,14 +9,24 @@ rep2 version 1.8.13に対応
 ・------------使い方--------------
 それぞれのファイルを上書き
 
-携帯モードがiPhoneモードになります。
+携帯モードが iPhone モードになります。
 http:// 〜 /index.php?b=k
+
+※080826以降のバージョンより
+http:// 〜 /iphone.php 
+でiPhoneモードになります
+
 
 ・------------注意------------------
 もとに戻せないのでバックアップは確実に
 
 
 ・----------更新履歴----------------
+08/08/26
+lib 内のファイルを iphone に移動
+これにより携帯モードと共存可能
+でも、どっかリンクミスでバグでるかも
+
 08/08/12
 板一覧の戻るボタン修正
 
