--- a/readme
+++ b/readme
@@ -3,25 +3,26 @@ rep2iPhone
 「p2をiPhoneに対応させようぜ」スレより
 p2をiPhoneで見やすいようにするもの。
 
-rep2 version 1.8.13に対応
+rep2 version 1.8.40に対応
 拡張パックには非対応
 
 ・------------使い方--------------
-それぞれのファイルを上書き
+それぞれのファイルを放り込む
 
-携帯モードが iPhone モードになります。
-http:// 〜 /index.php?b=k
-
-※080826以降のバージョンより
 http:// 〜 /iphone.php 
 でiPhoneモードになります
 
 
 ・------------注意------------------
-もとに戻せないのでバックアップは確実に
+バックアップは確実に
 
 
 ・----------更新履歴----------------
+08/10/13
+rep2 新バージョンにあわせてコード書き換え
+更新　menu_i.php
+更新　subject_i.php
+
 08/08/26
 lib 内のファイルを iphone に移動
 これにより携帯モードと共存可能
